# Nostra

./: README.md
contract/: Cargo.toml  build.sh  deploy.sh  env.sh  news.json
contract/src/: agent.rs  lib.rs
nostra/: Dockerfile  docker-compose.yml  jsconfig.json  package-lock.json  package.json
nostra/src/: config.js
nostra/src/components/: navigation.js
nostra/src/components/agentmodal/: index.js
nostra/src/components/excution/: index.js
nostra/src/components/leftbar/: index.js
nostra/src/components/rightbar/: index.js
nostra/src/components/welcome/: index.js
nostra/src/pages/: _app.js  _document.js  index.js
nostra/src/pages/api/: post.js  run.js  swap.js
nostra/src/styles/: app.module.css  globals.css
nostra/src/utils/: constant.js  search-token.ts
nostra/src/wallets/: web3modal.js
