[package]
name = "nostra"
version = "0.1.0"
authors = ["Henry <hy2878@nyu.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
serde_json = "1.0"
near-units = "0.2.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true